<resources>

    <string name="action_filter">请输入关键字</string>
    <string name="verbose_title">Verbose</string>
    <string name="debug_title">Debug</string>
    <string name="info_title">Info</string>
    <string name="warn_title">Warn</string>
    <string name="error_title">Error</string>
    <string name="assert_title">Assert</string>
    <string name="unknown_title">Unknown</string>
    <string name="brief_title">Brief</string>

    <string-array name="log_levels">
        <item>Verbose</item>
        <item>Debug</item>
        <item>Info</item>
        <item>Warn</item>
        <item>Error</item>
        <item>Assert</item>
    </string-array>
    <string name="error_details_title">错误详情</string>
    <string name="error_details_close">关闭</string>
    <string name="error_details_copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="error_details_clipboard_label">错误信息</string>
    <string name="settings">设置</string>
    <string name="select_logs">选择</string>
    <string name="auto_logs">自动</string>
    <string name="noauto_logs">手动</string>
    <string name="clear_logs">清空</string>
    <string name="init_error">CrashCatcher初始化失败</string>
    <string name="alreadinit">CrashCatcher已初始化,请勿重复初始化</string>
    <string name="shouldone">请确保App中只有一个自定义CrashCatcher！</string>
    <string name="error_more">App频繁崩溃，暂不启动ErrorActivity！</string>
    <string name="cannot_show">Application或者ErrorActivity出错，不能启动自定义ErrorActivity</string>
    <string name="excute_catch">App发生崩溃，执行CrashCatcher</string>
    <string name="init_finish">CrashCatcher已经初始化完成</string>
    <string name="init_error_check">初始化CrashCatcher失败，请检查是否正确配置</string>
    <string name="test_name">AndroidTestTool</string>
    <string name="click_show">点击显示测试悬浮窗</string>
    <string name="some_logs">日志详情</string>
    <string name="confirm">确定</string>
    <string name="select">选取</string>
    <string name="log_clear_tag">日志分割线</string>
    <string name="log_clear_taghint">********************************************************************************</string>
</resources>
