<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/test_nb_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/test_spinner"
            style="@style/HeaderBar.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="1dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/test_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/action_filter"
                android:minWidth="100dp"
                android:textColor="@color/white"
                android:textColorHint="@color/theme_accent"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/test_search"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search" />

        <TextView
            android:id="@+id/test_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/select_logs"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/test_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/auto_logs"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/test_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/clear_logs"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/activity_main_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:divider="@null"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:scrollbars="vertical" />


</LinearLayout>
