<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/test_nb_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/test_spinner"
            style="@style/HeaderBar.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/test_select"
            android:layout_toRightOf="@+id/test_spinner"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/test_keyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/action_filter"
                android:minWidth="100dp"
                android:textColor="@color/white"
                android:textColorHint="@color/theme_accent"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/test_search"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_search" />
        </LinearLayout>

        <TextView
            android:id="@+id/test_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/test_setting"
            android:text="@string/select_logs"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/test_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_main_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="vertical" />


</LinearLayout>
